syntax = "proto3";

package server;

option go_package = "server/proto";

message PingRequest {}

message PingResponse {}

message EncodeURLRequest {
  string url = 1;
}

message EncodeURLResponse {
  string short = 1;
}

message BatchEncodeURLRequest {
  message BatchURL {
    string correlation_id = 1;
    string original_url = 2;
  }
  repeated BatchURL urls = 1;
}

message BatchEncodeURLResponse {
  message BatchURL {
    string correlation_id = 1;
    string short_url = 2;
  }
  repeated BatchURL urls = 1;
}

message DecodeURLRequest {
  string code = 1;
}

message DecodeURLResponse {
  string original_url = 1;
}

message GetUserURLsRequest {}

message GetUserURLsResponse {
  message UserURL {
    string original_url = 1;
    string short_url = 2;
  }
  repeated UserURL urls = 1;
}

message DeleteUserURLsRequest {
  repeated string urls = 1;
}

message DeleteUserURLsResponse {}

message GetStatsRequest {}

message GetStatsResponse {
  int32 urls = 1;
  int32 users = 2;
}
service ShortlyService {
  rpc Ping(PingRequest) returns (PingResponse);
  rpc EncodeURL(EncodeURLRequest) returns (EncodeURLResponse);
  rpc BatchEncodeURLs(BatchEncodeURLRequest) returns (BatchEncodeURLResponse);
  rpc DecodeURL(DecodeURLRequest) returns (DecodeURLResponse);
  rpc GetUserURLs(GetUserURLsRequest) returns (GetUserURLsResponse);
  rpc DeleteUserURLs(DeleteUserURLsRequest) returns (DeleteUserURLsResponse);
  rpc GetInternalStats(GetStatsRequest) returns (GetStatsResponse);
}
